# nifti_models

./: pyproject.toml
src/nifti_models/: __init__.py  bids.py  fields.py  models.py  ndarray.py
tests/: test_header.py
